# interactive-chat-app-with-openai

./: .gitignore  README.md  pyproject.toml  requirements.txt
frontend/: app.py
frontend/static/: app.css
test/: test_record_audio.py
