[tool.poetry]
name = "interactive-chat-app-with-openai"
version = "0.1.0"
description = ""
authors = ["Harish Sridhar <harish.18.sridhar@gmail.com>"]
readme = "README.md"
packages = [{include = "interactive_chat_app_with_openai"}]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.4"
pyaudio = "^0.2.13"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
